# engineering-practices-hse

./: .gitattributes  LICENSE  README.md  Инженерные практики _ titanic_experiment – Weights & Biases.html
dataset/: AQI By State 1980-2022.csv
hw01/: pyproject.toml
hw03/: dvc.yaml
hw03/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
hw03/catboost_info/learn/: events.out.tfevents
hw03/catboost_info/test/: events.out.tfevents
hw03/pytitanic/: features.py  model.py
hw03/results/: .gitignore  cb-metrics.json
