[tool.poetry]
name = "hw01"
version = "0.1.0"
description = ""
authors = ["gvolsky <moseychuk.art@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pylint = "^3.0.3"
black = "^23.12.0"
isort = "^5.13.1"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
